Fixing overflow issues in tables

--- a/frontend/src/pages/Table.scss
+++ b/frontend/src/pages/Table.scss
@@ -3,7 +3,7 @@ table {
   margin: 3%;
   border-collapse: separate;
   border-spacing: 0 0.3em;
-
+  table-layout: fixed;
 }
 
 thead th {
@@ -59,6 +59,9 @@ tr td:last-child {
   color: #6A5B70;
   line-height: 18px;
   margin: 0.8em 2%;
+
+  white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 
 }
@@ -74,6 +77,7 @@ tr :nth-child(2) {
 
 tr :nth-child(3) {
   width: 30%;
+  max-width: 30%;
 }
 
 tr :nth-child(4) {
